# Yoda

./: .gitignore  Cargo.toml  INSTALL.sh  LICENSE  Makefile  README.md  composer.json  config.json  io.github.yggverse.Yoda.yaml  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: flatpak.yml  linux.yml  rust.yml
data/: io.github.yggverse.Yoda.desktop
po/: POTFILES.in
src/: Yoda.php  action.rs  app.cpp  app.hpp  app.rs  browser.rs  main.cpp  main.h  main.hpp  main.rs  profile.rs  tool.rs
src/Abstract/: Window.php
src/Abstract/Entity/: Button.php  Entry.php  HeaderBar.php
src/Abstract/Model/: Connection.php  Identity.php
src/Box/: Main.php  Menu.php  Navigation.php  Tab.php
src/Button/: Back.php  Forward.php  Go.php  Home.php  Reload.php
src/Controller/: Browser.php  Tab.php
src/Entity/: App.php  Browser.php  Window.php
src/Entity/Box/: Menu.php  Navigation.php  Tab.php
src/Entity/Browser/: Bookmark.php  Container.php  Header.php  History.php  Menu.php
src/Entity/Browser/Bookmark/: Container.php  Header.php
src/Entity/Browser/Container/: Page.php  Tab.php
src/Entity/Browser/Header/: Navigation.php  Tab.php  Tray.php
src/Entity/Browser/History/: Container.php  Header.php
src/Entity/Browser/Menu/: Bookmark.php  Debug.php  File.php  Help.php  History.php  Quit.php  Tab.php  Tool.php
src/Entity/Button/: Back.php  Forward.php  Go.php  Home.php  Reload.php
src/Entity/Entry/: Address.php
src/Entity/Label/: Content.php  Tray.php
src/Entity/Menu/Bar/: Main.php
src/Entity/Menu/Item/: Quit.php  Yoda.php
src/Entity/Tab/: History.php  Page.php
src/Entity/Window/: Header.php  Tab.php
src/Entity/Window/Tab/: Address.php  History.php
src/Entry/: Address.php
src/Interface/Model/: Buffer.php  Connection.php  Identity.php  Pool.php
src/Label/: Content.php  Tray.php
src/Menu/Bar/: Main.php
src/Menu/Item/: Quit.php  Yoda.php
src/Model/: Config.php  Connection.php  Database.php  File.php  Filesystem.php  History.php  Memory.php  Page.php  Pool.php  Response.php
src/Model/Connection/: File.php  Gemini.php  Nex.php
src/Model/Database/: Auth.php  Bookmark.php  Cache.php  History.php  Identity.php  Session.php
src/Model/Gtk/Pango/: Markup.php
src/Model/Identity/: Gemini.php
src/Page/: Nothing.gmi  Oops.gmi  Protocol.gmi  Redirect.gmi  Welcome.gmi
src/Tab/: Page.php
src/Template/: welcome.gmi
src/Theme/: Default.css  default.css
src/Yoda/: Browser.cpp  Browser.h
src/Yoda/Browser/: Header.cpp  Header.h
src/action/: browser.rs
src/app/: action.rs  browser.cpp  browser.h  browser.hpp  browser.rs  database.rs
src/app/browser/: about.rs  action.rs  bookmarks.rs  container.cpp  container.h  database.rs  header.cpp  header.h  header.hpp  header.rs  history.rs  main.cpp  main.hpp  main.rs  menu.cpp  menu.h  page.cpp  page.hpp  proxy.rs  welcome.rs  widget.rs  window.rs  wrapper.rs
src/app/browser/action/: about.rs  close.rs  (+8 more)
src/browser/: action.rs  database.rs  db.rs  header.rs  main.rs  mod.rs  widget.rs
src/browser/header/: mod.rs  tray.rs  widget.rs
src/browser/main/: mod.rs  tab.rs  widget.rs
src/lib/: database.cpp  database.hpp  url.cpp  url.hpp
src/lib/database/: session.cpp  session.hpp
src/profile/: bookmark.rs  database.rs  history.rs  identity.rs  proxy.rs  search.rs  tofu.rs
src/profile/bookmark/: database.rs  error.rs  item.rs  memory.rs
src/profile/database/: bookmark.rs  history.rs  identity.rs
src/profile/history/: database.rs  item.rs  memory.rs
src/profile/identity/: auth.rs  certificate.rs  database.rs  error.rs  gemini.rs  item.rs  memory.rs
src/profile/proxy/: database.rs  ignore.rs  misc.rs  rule.rs
src/profile/search/: database.rs  error.rs  memory.rs
src/profile/tofu/: certificate.rs  database.rs
src/theme/: default.css
(+813 files in other folders)
