[package]
name = "Yoda"
version = "0.12.4"
edition = "2024"
license = "MIT"
readme = "README.md"
description = "Browser for Gemini Protocol"
keywords = ["gemini", "gemini-protocol", "gtk", "browser", "client"]
categories = ["network-programming", "gui"]
repository = "https://github.com/YGGverse/Yoda"
# homepage = "https://yggverse.github.io"

[dependencies.adw]
package = "libadwaita"
version = "0.8.0"
features = ["v1_5"]

[dependencies.gtk]
package = "gtk4"
version = "0.10.0"
features = ["gnome_46"]

[dependencies.sqlite]
package = "rusqlite"
version = "0.37.0"

[dependencies.sourceview]
package = "sourceview5"
version = "0.10.0"

[dependencies]
ansi-parser = "0.9.1"
anyhow = "1.0.97"
ggemini = "0.20.0"
ggemtext = "0.7.0"
indexmap = "2.10.0"
itertools = "0.14.0"
libspelling = "0.4.1"
maxminddb = "0.26.0"
openssl = "0.10.72"
plurify = "0.2.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"
syntect = "5.2.0"

# development
[patch.crates-io]
ggemini = { git = "https://github.com/YGGverse/ggemini.git" }
# ggemtext = { git = "https://github.com/YGGverse/ggemtext.git" }
# plurify = { git = "https://github.com/YGGverse/plurify.git" }
# libspelling = { git = "https://github.com/YGGverse/libspelling-rs.git", branch = "yoda-0.12"}
