[package]
name = "Yoda"
version = "0.12.13"
edition = "2024"
license = "MIT"
readme = "README.md"
description = "Browser for Gemini Protocol"
keywords = ["gemini", "gemini-protocol", "gtk", "browser", "client"]
categories = ["network-programming", "gui"]
repository = "https://github.com/YGGverse/Yoda"
# homepage = "https://yggverse.github.io"

[dependencies.adw]
package = "libadwaita"
version = "0.9.1"
features = ["v1_5"]

[dependencies.gtk]
package = "gtk4"
version = "0.11.3"
features = ["gnome_46"]

[dependencies.sqlite]
package = "rusqlite"
version = "0.39.0"

[dependencies.sourceview]
package = "sourceview5"
version = "0.11.0"

[dependencies]
ansi-parser = "0.9.1"
anyhow = "1.0.97"
ggemini = "0.20.1"
ggemtext = "0.7.1"
indexmap = "2.10.0"
itertools = "0.14.0"
libspelling = "0.5.0"
maxminddb = "0.28.1"
openssl = "0.10.72"
plurify = "0.2.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.34.0"
regex = "1.12.3"
syntect = "5.2.0"

# development
[patch.crates-io]
# ggemini = { git = "https://github.com/YGGverse/ggemini.git" }
# ggemtext = { git = "https://github.com/YGGverse/ggemtext.git" }
# plurify = { git = "https://github.com/YGGverse/plurify.git" }
libspelling = { git = "https://github.com/YGGverse/libspelling-rs-050", branch = "yoda-0.12.13" }